--- a/README
+++ b/README
@@ -1,2 +1,10 @@
 Client for Lacuna Expanse http://www.lacunaexpanse.com/ written in Perl 5.8
 
+The following CPAN modules are required to use the example scripts:
+
+* Class::XSAccessor
+* YAML::Any
+* Moose
+* MooseX
+* JSON::RPC::Common
+* AnyEvent
